--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <div id="gameContainer">
         <div class="score">
-            <p class="text">Текущий счет:</p>
+            <p class="text">CURRENT SCORE:</p>
             <div id="currentScore">0</div>
-            <p class="text">Лучший счет:</p>
+            <p class="text">BEST SCORE:</p>
             <div id="bestScore">0</div>
         </div>
         <canvas id="gameBoard" width="400px" height="400px"></canvas>
-        <button id="restartBtn">Новая игра</button>
+        <button id="restartBtn">NEW GAME</button>
     </div>
     <script src="js/index.js"></script>
 </body>
