--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <p class="text">BEST SCORE:</p>
             <div id="bestScore">0</div>
         </div>
-        <canvas id="gameBoard" width="400px" height="400px"></canvas>
-        <button id="restartBtn">NEW GAME</button>
+        <canvas id="gameBoard"></canvas>
+        <button id="restartBtn" class="restartBtn">NEW GAME</button>
     </div>
     <script src="js/index.js"></script>
 </body>
